--- a/README.Rmd
+++ b/README.Rmd
@@ -14,21 +14,15 @@ knitr::opts_chunk$set(
 )
 ```
 
-[![img](https://img.shields.io/badge/Lifecycle-Maturing-007EC6)](https://github.com/bcgov/repomountie/blob/master/doc/lifecycle-badges.md)
-[![License](https://img.shields.io/badge/License-Apache%202.0-blue.svg)](https://opensource.org/licenses/Apache-2.0) 
-
+[![Lifecycle:Experimental](https://img.shields.io/badge/Lifecycle-Experimental-339999)](https://github.com/bcgov/repomountie/blob/master/doc/lifecycle-badges.md)
+[![License](https://img.shields.io/badge/License-Apache%202.0-blue.svg)](https://opensource.org/licenses/Apache-2.0)
 
 ```{r, echo=FALSE, results='asis', message=FALSE}
 library("envreportutils")
 ```
 
 
-# Analysis of trends and current amounts of protected lands and waters in B.C.
-
-A set of R scripts to complete the analysis behind the Environmental Indicator [Conserved Lands & Waters in B.C.](http://www.env.gov.bc.ca/soe/indicators/land/protected-lands-and-waters.html), published by [Environmental Reporting BC](http://www2.gov.bc.ca/gov/content?id=FF80E0B985F245CEA62808414D78C41B) in 2021.
-
-**Note**: Moving forward this analysis and indicator will be updated using the analysis and approach found [here](https://github.com/bcgov/land-designations-indicator).
-
+# Analysis of ecosystem representation in BC
 
 ### Data
 
@@ -53,16 +47,6 @@ Run `targets::tar_make()` to run project. This will run all of the analysis - no
 ### Required R packages
 
 The packages used in this analysis are catalogued in `packages.R`. The packages will be loaded automatically with `tar_make()` but some may need to be installed prior to initiating the workflow. 
-
-## Conserved Areas Shiny app
-
-One component of the conserved areas indicator is a shiny app that details the percentage of conserved area by ecoregion. The shiny app can be opened separately after the targets workflow has been run completely via the following code: 
-```{r}
-#install.packages("shiny")
-#library("shiny")
-#shiny::runApp('app')
-```
-
 
 ## Getting Help or Reporting an Issue
 
